tests/parser/octave_bang/test_4.m.octave.out
In test_4.m, line 1
| function rv = test_4(x, !)
|                         ^ error: expected IDENTIFIER, found OPERATOR instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
