tests/parser/octave_bang/test_4.m
function rv = test_4(x, !)
    rv = x;
end
